graal support